--- a/client/src/assets/sass/main.scss
+++ b/client/src/assets/sass/main.scss
@@ -15,6 +15,7 @@
 @import './components/tables';
 @import './components/avatar';
 @import './components/pagination';
+@import './components/popover';
 // layout
 @import "./layout/header";
 @import "./layout/footer";
