hide pagination if 1 page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -225,6 +225,9 @@ td {
 .ck-avatar {
   border-radius: 100px; }
 
+.page-numbers {
+  padding: 0; }
+
 .pagination {
   list-style: none;
   padding: 5px;
