--- a/client/src/assets/sass/main.css
+++ b/client/src/assets/sass/main.css
@@ -225,6 +225,9 @@ td {
 .ck-avatar {
   border-radius: 100px; }
 
+.page-numbers {
+  padding: 0; }
+
 .pagination {
   list-style: none;
   padding: 5px;
