--- a/client/src/assets/sass/components/_tables.scss
+++ b/client/src/assets/sass/components/_tables.scss
@@ -16,7 +16,12 @@ thead {
 
 th {
   text-align: left;
-  padding: 16px 16px;
+  padding: 16px 20px;
+}
+
+th:last-child {
+  padding-left: 36px;
+  text-align: center;
 }
 
 td {
@@ -24,4 +29,11 @@ td {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+td {
+  .ck-action {
+    width: 100%;
+    text-align: center;
+  }
 }
