--- a/client/src/assets/sass/components/_popover.scss
+++ b/client/src/assets/sass/components/_popover.scss
@@ -1,6 +1,7 @@
 .ck-popover {
   border-radius: 3px;
   box-shadow: none;
+  margin-left: 10px;
   .ck-popover__wrapper {
     width: 90%;
     margin: auto;
