--- a/client/src/assets/sass/main.scss
+++ b/client/src/assets/sass/main.scss
@@ -26,6 +26,7 @@
 @import './pages/createTutorial';
 @import './pages/postDetail';
 @import './pages/profile';
+@import './pages/posts';
 // Bootstrap
 html {
   box-sizing: border-box;
