--- a/client/src/assets/sass/components/_inputs.scss
+++ b/client/src/assets/sass/components/_inputs.scss
@@ -1,5 +1,6 @@
 input,
-textarea {
+textarea,
+select {
   width: 100%;
   border: 1px solid $ck-black;
   border-radius: 2px;
@@ -7,10 +8,19 @@ textarea {
   font-size: 14px;
 }
 
-input {
+input,
+select {
   height: 50px;
+}
+
+input {
   margin-bottom: 5px;
   transition: padding 0.2s;
+}
+
+select {
+  background: white;
+  margin: 15px 0;
 }
 
 input:focus,
