--- a/client/src/assets/sass/components/_inputs.scss
+++ b/client/src/assets/sass/components/_inputs.scss
@@ -34,6 +34,24 @@ label {
   font-weight: bold;
 }
 
+.search-label {
+  position: relative;
+}
+
+.ais-SearchBox-input {
+  background: none;
+  border: 1px solid $ck-border;
+  border-radius: 40px;
+  font-size: 20px;
+  padding-left: 10px;
+  margin-bottom: 30px;
+}
+
+.ais-SearchBox-submit,
+.ais-SearchBox-reset {
+  display: none;
+}
+
 .ck-header__search {
   input {
     margin-bottom: 0;
