--- a/client/src/assets/sass/main.css
+++ b/client/src/assets/sass/main.css
@@ -763,6 +763,10 @@ footer {
       background: #e0e0e0;
       padding: 10px; }
 
+.ck-user__posts {
+  margin-top: 400px;
+  background: white; }
+
 html {
   box-sizing: border-box;
   -ms-overflow-style: scrollbar; }
