Fixed subnav position

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -423,8 +423,8 @@ header {
   width: 100%;
   background: #F5F5F5;
   height: 50px;
-  margin-top: -15px;
-  border-bottom: 1px solid #e0e0e0; }
+  border-bottom: 1px solid #e0e0e0;
+  top: 67px; }
   .ck-subnav ul {
     display: flex;
     height: 50px;
