--- a/client/src/assets/sass/layout/_header.scss
+++ b/client/src/assets/sass/layout/_header.scss
@@ -135,8 +135,9 @@ header {
   width: 100%;
   background: #F5F5F5;
   height: 50px;
-  margin-top: -15px;
+  top: 65px;
   border-bottom: 1px solid $ck-border;
+  z-index: 2;
   ul {
     display: flex;
     height: 50px;
