--- a/client/src/assets/sass/components/_inputs.scss
+++ b/client/src/assets/sass/components/_inputs.scss
@@ -13,8 +13,8 @@ select {
   height: 50px;
 }
 
-input {
-  margin-bottom: 15px;
+input[type=text],
+input[type=password] {
   transition: padding 0.2s;
 }
 
@@ -25,7 +25,6 @@ input:disabled {
 
 select {
   background: white;
-  margin-bottom: 15px;
 }
 
 input:focus,
@@ -33,8 +32,14 @@ textarea:focus {
   outline: 0;
 }
 
-input:focus {
+input[type=text]:focus,
+input[type=password]:focus {
   padding: 20px;
+}
+
+input[type=file] {
+  border: none;
+  margin-top: 20px;
 }
 
 textarea {
@@ -46,6 +51,7 @@ textarea {
 label {
   display: block;
   padding-bottom: 5px;
+  margin-top: 15px;
   font-weight: bold;
 }
 
@@ -76,7 +82,7 @@ label {
 
 .input-group__icon {
   float: left;
-  padding: 14px 18px;
+  padding: 11px 18px;
   height: 50px;
   background: #eae9e7;
   color: $ck-black;
