--- a/client/src/assets/sass/main.scss
+++ b/client/src/assets/sass/main.scss
@@ -45,6 +45,14 @@ a {
   text-decoration: none;
 }
 
+.ck-logo-image {
+  width: 100%;
+}
+
+.ck-logo-image-sm {
+  width: 70%;
+}
+
 *,
 *::before,
 *::after {
