--- a/client/src/assets/sass/main.css
+++ b/client/src/assets/sass/main.css
@@ -69,6 +69,32 @@ button:focus {
 .ck-facebook:hover {
   background: #2f4679; }
 
+.ck-top {
+  width: 50px;
+  border-radius: 100px;
+  position: fixed;
+  bottom: 0;
+  right: 40px; }
+
+.ck-like {
+  width: 80px;
+  height: 80px;
+  border-radius: 300px;
+  border: 1px solid #ff9f1c;
+  margin-right: 20px; }
+  .ck-like i {
+    font-size: 30px; }
+
+.ck-isNotLiked {
+  background: none;
+  border: 1px solid #ff9f1c; }
+  .ck-isNotLiked i {
+    color: #ff9f1c; }
+
+.ck-isLiked {
+  background: #ff9f1c;
+  border: 1px solid #ff9f1c; }
+
 .spinner {
   display: flex;
   justify-content: center;
@@ -213,28 +239,38 @@ label {
   -webkit-box-shadow: 4px 4px 5px -1px rgba(0, 0, 0, 0.08);
   -moz-box-shadow: 4px 4px 5px -1px rgba(0, 0, 0, 0.08);
   box-shadow: 4px 4px 5px -1px rgba(0, 0, 0, 0.08); }
-  .ck-post__card .ck-post__image img {
-    width: 100%;
-    border-radius: 0 0 90px 90px; }
-  .ck-post__card .ck-post__image .ck-post__actions {
-    display: none; }
-    .ck-post__card .ck-post__image .ck-post__actions .ck-post__favorite,
-    .ck-post__card .ck-post__image .ck-post__actions .ck-post__likes {
+  .ck-post__card .ck-post__image {
+    max-height: 177px; }
+    .ck-post__card .ck-post__image .overlay {
       position: absolute;
-      top: 10px; }
-    .ck-post__card .ck-post__image .ck-post__actions i {
-      color: #ff9f1c;
-      font-size: 20px; }
-    .ck-post__card .ck-post__image .ck-post__actions .ck-post__favorite {
-      left: 26px; }
-    .ck-post__card .ck-post__image .ck-post__actions .ck-post__likes {
-      right: 26px; }
-      .ck-post__card .ck-post__image .ck-post__actions .ck-post__likes span {
-        padding: 0 5px;
+      width: 89.5%;
+      height: 177px;
+      background: black;
+      opacity: 0.38;
+      transition: opacity 0.4s; }
+    .ck-post__card .ck-post__image img {
+      width: 100%;
+      height: 177px;
+      object-fit: cover; }
+    .ck-post__card .ck-post__image .ck-post__actions {
+      display: none; }
+      .ck-post__card .ck-post__image .ck-post__actions .ck-post__favorite,
+      .ck-post__card .ck-post__image .ck-post__actions .ck-post__likes {
+        position: absolute;
+        top: 10px; }
+      .ck-post__card .ck-post__image .ck-post__actions i {
         color: #ff9f1c;
-        font-weight: bold; }
-  .ck-post__card .ck-post__image:hover .ck-post__actions {
-    display: inline; }
+        font-size: 20px; }
+      .ck-post__card .ck-post__image .ck-post__actions .ck-post__favorite {
+        left: 26px; }
+      .ck-post__card .ck-post__image .ck-post__actions .ck-post__likes {
+        right: 26px; }
+        .ck-post__card .ck-post__image .ck-post__actions .ck-post__likes span {
+          padding: 0 5px;
+          color: #ff9f1c;
+          font-weight: bold; }
+  .ck-post__card .ck-post__image:hover .overlay {
+    opacity: 0; }
   .ck-post__card .ck-post__info {
     margin-top: 10px;
     padding: 0 10px; }
@@ -290,6 +326,17 @@ td .ck-action {
 
 .ck-avatar {
   border-radius: 100px; }
+
+.edit-profile__avatar {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  .edit-profile__avatar img {
+    border-radius: 500px;
+    max-width: 300px;
+    height: 300px; }
+  .edit-profile__avatar input {
+    width: 80px; }
 
 .page-numbers {
   padding: 0;
@@ -646,6 +693,16 @@ footer {
     .ck-post-detail__container .ck-post-detail__user .ck-avatar {
       width: 100px;
       margin-top: 16px; }
+  .ck-post-detail__container .ck-post__actions {
+    margin-top: 40px; }
+    .ck-post-detail__container .ck-post__actions .ck-post__socials {
+      float: right;
+      margin-top: 30px; }
+      .ck-post-detail__container .ck-post__actions .ck-post__socials i {
+        font-size: 30px;
+        margin-right: 20px;
+        color: #ff9f1c;
+        cursor: pointer; }
 
 .ck-comment__container {
   margin-top: 60px; }
@@ -730,11 +787,12 @@ footer {
     width: 100%; } }
 
 .ck-profile__header {
-  background: blue;
+  background: #ff9f1c;
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-radius: 6px 6px 0 0; }
+  border-radius: 6px 6px 0 0;
+  margin-top: 65px; }
   .ck-profile__header .ck-profile__avatar {
     margin-top: 20px; }
     .ck-profile__header .ck-profile__avatar img {
@@ -751,13 +809,14 @@ footer {
     color: #ff9f1c; }
 
 .ck-profile__bio-container,
-.ck-github {
+.ck-github__container {
   border-radius: 3px;
   border: 1px solid #e0e0e0;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.04); }
 
 .ck-profile__bio-container {
-  background: white; }
+  background: white;
+  margin-top: -65px; }
   .ck-profile__bio-container .ck-profile__bio-wrapper {
     width: 90%;
     margin: auto;
@@ -782,26 +841,24 @@ footer {
           margin-right: 20px;
           font-size: 15px; }
 
-.ck-github {
+.ck-github__container {
   background: white;
-  min-height: 200px;
-  border-radius: 3px;
-  margin-bottom: 20px; }
-  .ck-github .ck-profile__github-wrapper {
-    width: 90%;
-    margin: 30px; }
-  .ck-github h2 a {
-    color: #ff9f1c; }
-  .ck-github .stats {
-    border: 1px solid #e0e0e0;
+  margin-top: 30px; }
+  .ck-github__container h3 {
+    margin-left: 30px; }
+  .ck-github__container .ck-github {
     border-radius: 3px;
-    float: left;
-    margin-right: 20px; }
-    .ck-github .stats span {
-      padding: 20px; }
-    .ck-github .stats i {
-      background: #e0e0e0;
-      padding: 10px; }
+    margin-bottom: 20px; }
+    .ck-github__container .ck-github .ck-profile__github-wrapper {
+      width: 90%;
+      margin: 30px; }
+      .ck-github__container .ck-github .ck-profile__github-wrapper hr {
+        border: 0;
+        height: 0;
+        border-top: 1px solid rgba(0, 0, 0, 0.1);
+        border-bottom: 1px solid rgba(255, 255, 255, 0.3); }
+    .ck-github__container .ck-github h2 a {
+      color: #ff9f1c; }
 
 html {
   box-sizing: border-box;
@@ -815,6 +872,12 @@ body {
 
 a {
   text-decoration: none; }
+
+.ck-logo-image {
+  width: 100%; }
+
+.ck-logo-image-sm {
+  width: 70%; }
 
 *,
 *::before,
