--- a/client/src/assets/sass/main.css
+++ b/client/src/assets/sass/main.css
@@ -154,9 +154,10 @@ label {
   position: relative; }
 
 .ais-SearchBox-input {
-  background: none;
+  background: white;
+  width: 30%;
   border: 1px solid #e0e0e0;
-  border-radius: 40px;
+  border-radius: 3px;
   font-size: 20px;
   padding-left: 10px;
   margin-bottom: 30px; }
@@ -385,6 +386,14 @@ td .ck-action {
   .ck-popover .ck-popover:before {
     border-width: 36px;
     margin-top: -36px; }
+
+.ck-feed__header {
+  margin-top: -15px;
+  height: 400px;
+  width: 100%;
+  background: #ff9f1c; }
+  .ck-feed__header .ck-feed__header-content {
+    padding-top: 60px; }
 
 header {
   width: 100%;
@@ -809,35 +818,45 @@ footer {
     color: #ff9f1c; }
 
 .ck-profile__bio-container,
+.ck-profile__skills,
 .ck-github__container {
   border-radius: 3px;
   border: 1px solid #e0e0e0;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.04); }
 
-.ck-profile__bio-container {
-  background: white;
-  margin-top: -65px; }
-  .ck-profile__bio-container .ck-profile__bio-wrapper {
-    width: 90%;
-    margin: auto;
-    display: flex; }
-    .ck-profile__bio-container .ck-profile__bio-wrapper .ck-profile__bio,
-    .ck-profile__bio-container .ck-profile__bio-wrapper .ck-profile__skills {
-      margin-top: 20px;
-      margin-bottom: 30px; }
-    .ck-profile__bio-container .ck-profile__bio-wrapper .ck-profile__bio {
-      width: 80%; }
-    .ck-profile__bio-container .ck-profile__bio-wrapper .ck-profile__skills {
-      width: 20%;
-      margin-left: 40px; }
-      .ck-profile__bio-container .ck-profile__bio-wrapper .ck-profile__skills ul {
+.ck-profile__bio-skills {
+  display: flex;
+  flex-direction: row; }
+  .ck-profile__bio-skills .ck-profile__bio-container {
+    background: white;
+    margin-top: -65px;
+    width: 80%; }
+    .ck-profile__bio-skills .ck-profile__bio-container .ck-profile__bio-wrapper {
+      width: 90%;
+      margin: auto;
+      display: flex; }
+      .ck-profile__bio-skills .ck-profile__bio-container .ck-profile__bio-wrapper .ck-profile__bio,
+      .ck-profile__bio-skills .ck-profile__bio-container .ck-profile__bio-wrapper .ck-profile__skills {
+        margin-top: 20px;
+        margin-bottom: 30px; }
+      .ck-profile__bio-skills .ck-profile__bio-container .ck-profile__bio-wrapper .ck-profile__bio {
+        width: 80%; }
+  .ck-profile__bio-skills .ck-profile__skills {
+    background: white;
+    margin-top: -65px;
+    width: 20%;
+    margin-left: 40px; }
+    .ck-profile__bio-skills .ck-profile__skills .ck-profile__skills-wrapper {
+      width: 90%;
+      margin: auto; }
+      .ck-profile__bio-skills .ck-profile__skills .ck-profile__skills-wrapper ul {
         list-style: none;
         padding: 0; }
-      .ck-profile__bio-container .ck-profile__bio-wrapper .ck-profile__skills li {
+      .ck-profile__bio-skills .ck-profile__skills .ck-profile__skills-wrapper li {
         font-size: 20px;
         padding: 10px 0 10px 10px;
         border-bottom: 1px solid #e0e0e0; }
-        .ck-profile__bio-container .ck-profile__bio-wrapper .ck-profile__skills li i {
+        .ck-profile__bio-skills .ck-profile__skills .ck-profile__skills-wrapper li i {
           margin-right: 20px;
           font-size: 15px; }
 
@@ -860,6 +879,31 @@ footer {
     .ck-github__container .ck-github h2 a {
       color: #ff9f1c; }
 
+.ck-user__posts-container {
+  background: white;
+  margin-top: 150px;
+  padding: 20px; }
+  .ck-user__posts-container .ck-user__posts-wrapper {
+    width: 95%;
+    margin: 20px auto; }
+    .ck-user__posts-container .ck-user__posts-wrapper h3 {
+      margin-top: 20px; }
+    .ck-user__posts-container .ck-user__posts-wrapper .ck-user__posts a {
+      color: #ff9f1c; }
+    .ck-user__posts-container .ck-user__posts-wrapper .ck-user__posts hr {
+      border: 0;
+      height: 0;
+      border-top: 1px solid rgba(0, 0, 0, 0.1);
+      border-bottom: 1px solid rgba(255, 255, 255, 0.3); }
+    .ck-user__posts-container .ck-user__posts-wrapper .ck-user__posts .ck-user__posts-actions {
+      float: right;
+      position: relative;
+      bottom: 60px; }
+      .ck-user__posts-container .ck-user__posts-wrapper .ck-user__posts .ck-user__posts-actions i {
+        margin-right: 10px;
+        font-size: 18px;
+        cursor: pointer; }
+
 html {
   box-sizing: border-box;
   -ms-overflow-style: scrollbar; }
@@ -878,6 +922,9 @@ a {
 
 .ck-logo-image-sm {
   width: 70%; }
+
+.clearer {
+  clear: both; }
 
 *,
 *::before,
