--- a/client/src/assets/sass/main.scss
+++ b/client/src/assets/sass/main.scss
@@ -40,6 +40,7 @@ body {
 
 .container {
   margin-top: 80px;
+  min-height: 70vh;
 }
 
 a {
@@ -52,6 +53,13 @@ a {
 
 .ck-logo-image-sm {
   width: 70%;
+}
+
+hr {
+  border: 0;
+  height: 0;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .clearer {
