--- a/client/src/assets/sass/components/_inputs.scss
+++ b/client/src/assets/sass/components/_inputs.scss
@@ -62,11 +62,21 @@ label {
 .ais-SearchBox-input {
   background: white;
   width: 30%;
-  border: 1px solid $ck-border;
+  height: 40px;
+  border: 1px solid #C77716;
   border-radius: 3px;
   font-size: 20px;
   padding-left: 10px;
   margin-bottom: 30px;
+  @media (max-width: 992px) {
+    width: 50%;
+  }
+  @media (max-width: 768px) {
+    width: 60%;
+  }
+  @media (max-width: 576px) {
+    width: 100%;
+  }
 }
 
 .ais-SearchBox-submit,
