--- a/client/src/assets/sass/pages/_posts.scss
+++ b/client/src/assets/sass/pages/_posts.scss
@@ -12,18 +12,13 @@
       a {
         color: $ck-orange;
       }
-      hr {
-        border: 0;
-        height: 0;
-        border-top: 1px solid rgba(0, 0, 0, 0.1);
-        border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-      }
       .ck-user__posts-actions {
         float: right;
         position: relative;
         bottom: 60px;
         i {
           margin-right: 10px;
+          color: $ck-orange;
           font-size: 18px;
           cursor: pointer;
         }
